# island

./: DESCRIPTION  MD5  NAMESPACE  NEWS.md  configure  configure.ac
R/: DataSimulation.R  EnvironmentalFit.R  EvaluationCriteria.R  IBDModels.R  IrregularSamplingTimes.R  NullModel.R  RatesToProbabilities.R  RegularSamplingTimes.R  alonso15.R  da_MacKenzie_mle.R  da_mle_cedp.R  da_upgma_AIC_cedp.R  idaho.R  island.R  simberloff.R
data/: alonso.RData  alonso15.RData  idaho.RData  simberloff.RData
inst/: CITATION
inst/doc/: IBDmodels.R  island.R  (+6 more)
man/: akaikeic.Rd  all_environmental_fit.Rd  alonso.Rd  alonso15.Rd  cetotrans.Rd  data_generation.Rd  ibd_models.Rd  idaho.Rd  irregular_multiple_datasets.Rd  irregular_single_dataset.Rd  island.Rd  lakshadweep.Rd  lakshadweepPLUS.Rd  mss_cedp.Rd  r_squared.Rd  rates_calculator.Rd  regular_sampling_scheme.Rd  simberloff.Rd  sss_cedp.Rd  upgma_model_selection.Rd  weight_of_evidence.Rd
src/: Counting_Type_of_Transitions.c  GSL_MacKenzie_NLL_Uneven_Function.c  GSL_MacKenzie_NLLikelihood_Function.c  GSL_NLL_Function_Uneven.c  GSL_NLLikelihood_Function.c  IO_AKAIKE_Model_Selection.c  IO_Missing_Values.c  MODEL_SELECTION_UPGMA_MacKENZIE_R_FUNCTION.c  MODEL_SELECTION_UPGMA_MacKENZIE_R_SHLIB.c  MODEL_SELECTION_UPGMA_R_FUNCTION.c  MODEL_SELECTION_UPGMA_R_SHLIB.c  MacKenzie_NLLikelihood_Function.c  Makevars.in  Parameter_Model.c  R_SHLIB___mle_MacKenzie_NLL_Uneven_Minimization.c  R_SHLIB___mle_MacKenzie_NLLikelihood_Minimization.c  R_SHLIB___mle_NLL_Uneven_Minimization.c  UPGMA_CLUSTERING_PARTITION.c  config.h  mle_Col_Ext_Uneven_Matrix_R_SHLIB.c  upgma_clustering.c
tests/: testthat.R
vignettes/: IBDmodels.Rmd  detectability.Rmd
(+14 files in other folders)
